--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
@@ -121,6 +121,10 @@
     <value>Kan ikke finde en instans af typen '{0}' med den unikke identifikation '{1}'.</value>
     <comment>{0} = Navn på typen, {1} = Unik identifikation.</comment>
   </data>
+  <data name="IllegalValue" xml:space="preserve">
+    <value>Værdien '{0}' er invalid for '{1}'.</value>
+    <comment>{0} = Værdi, {1} = Navn på egenskab.</comment>
+  </data>
   <data name="RepositoryError" xml:space="preserve">
     <value>Fejl i repository metode '{0}': {1}</value>
     <comment>{0} = Navn på metode, {1} = Fejlbesked.</comment>
