--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.en-US.resx
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.en-US.resx
@@ -121,6 +121,10 @@
     <value>Unabled to find an instance of the type '{0}' with the unique identification '{1}'.</value>
     <comment>{0} = Name of type, {1} = Unique identification.</comment>
   </data>
+  <data name="IllegalValue" xml:space="preserve">
+    <value>Illegal value '{0}' for '{1}'.</value>
+    <comment>{0} = Value, {1} = Name of property.</comment>
+  </data>
   <data name="RepositoryError" xml:space="preserve">
     <value>Error in repository method '{0}': {1}</value>
     <comment>{0} = Method name, {1} = Error message.</comment>
