--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
@@ -117,6 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="BalanceLineAccountNumberMissing" xml:space="preserve">
+    <value>Kontonummer skal indtastes.</value>
+  </data>
+  <data name="BalanceLineDateIsForwardInTime" xml:space="preserve">
+    <value>Bogføringsdatoen må ikke være fremme i tiden.</value>
+  </data>
+  <data name="BalanceLineDateToOld" xml:space="preserve">
+    <value>Bogføringsdatoen må ikke være ældre end {0} dage.</value>
+    <comment>{0} = Dage.</comment>
+  </data>
+  <data name="BalanceLineTextMissing" xml:space="preserve">
+    <value>Tekst skal indtastes.</value>
+  </data>
+  <data name="BalanceLineValueBelowZero" xml:space="preserve">
+    <value>Et beløb må ikke være under 0.</value>
+  </data>
+  <data name="BalanceLineValueMissing" xml:space="preserve">
+    <value>Debit eller kreditbeløb skal indtastes.</value>
+  </data>
   <data name="CantAutoMapType" xml:space="preserve">
     <value>Kan ikke automappe typen '{0}'.</value>
     <comment>{0} = Navn på typen.</comment>
