--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AccountIsOverdrawn" xml:space="preserve">
+    <value>Det disponible beløb på kontoen er overtrukket.</value>
+  </data>
   <data name="BalanceLineAccountNumberMissing" xml:space="preserve">
     <value>Kontonummer skal indtastes.</value>
   </data>
@@ -135,6 +138,9 @@
   </data>
   <data name="BalanceLineValueMissing" xml:space="preserve">
     <value>Debit eller kreditbeløb skal indtastes.</value>
+  </data>
+  <data name="BudgetAccountIsOverdrawn" xml:space="preserve">
+    <value>Budgettet på budgetkontoen er overtrukket.</value>
   </data>
   <data name="CantAutoMapType" xml:space="preserve">
     <value>Kan ikke automappe typen '{0}'.</value>
