--- a/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.en-US.resx
+++ b/OSDevGrp.root/OSIntranet.root/OSDevGrp.OSIntranet/OSDevGrp.OSIntranet.Resources/ExceptionMessages.en-US.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AccountIsOverdrawn" xml:space="preserve">
+    <value>The account is overdrawn.</value>
+  </data>
   <data name="BalanceLineAccountNumberMissing" xml:space="preserve">
     <value>The account number must be entered.</value>
   </data>
@@ -135,6 +138,9 @@
   </data>
   <data name="BalanceLineValueMissing" xml:space="preserve">
     <value>A value must be entered.</value>
+  </data>
+  <data name="BudgetAccountIsOverdrawn" xml:space="preserve">
+    <value>The budget account is overdrawn.</value>
   </data>
   <data name="CantAutoMapType" xml:space="preserve">
     <value>Can't automap the type '{0}'.</value>
