--- a/OSDevGrp.OSIntranet.Resources/ExceptionMessages.en-US.resx
+++ b/OSDevGrp.OSIntranet.Resources/ExceptionMessages.en-US.resx
@@ -195,4 +195,14 @@
   <data name="AppliesToMustBeSuppliedInRequestSecurityToken" xml:space="preserve">
     <value>AppliesTo must be supplied in the RST.</value>
   </data>
+  <data name="NotAuthorizedToUseService" xml:space="preserve">
+    <value>You are not authorized to use this service: {0}</value>
+    <comment>{0} = Reason.</comment>
+  </data>
+  <data name="NoIdentityWasFound" xml:space="preserve">
+    <value>No identity was found.</value>
+  </data>
+  <data name="MissingClaimTypeForIdentity" xml:space="preserve">
+    <value>A required claim type is missing for the identity.</value>
+  </data>
 </root>
