--- a/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
+++ b/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
@@ -205,4 +205,7 @@
   <data name="MissingClaimTypeForIdentity" xml:space="preserve">
     <value>En specifik claim type mangler for denne identitet.</value>
   </data>
+  <data name="NoClaimsWasFound" xml:space="preserve">
+    <value>Der blev ikke fundet nogle claims.</value>
+  </data>
 </root>
