--- a/OSDevGrp.OSIntranet.Resources/ExceptionMessages.en-US.resx
+++ b/OSDevGrp.OSIntranet.Resources/ExceptionMessages.en-US.resx
@@ -205,4 +205,7 @@
   <data name="MissingClaimTypeForIdentity" xml:space="preserve">
     <value>A required claim type is missing for the identity.</value>
   </data>
+  <data name="NoClaimsWasFound" xml:space="preserve">
+    <value>No claims was found.</value>
+  </data>
 </root>
