--- a/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
+++ b/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
@@ -255,4 +255,16 @@
   <data name="MembershipCannotDowngrade" xml:space="preserve">
     <value>Medlemsskabet på et husstandsmedlemsskab kan ikke nedgraderes.</value>
   </data>
+  <data name="DateTimeValueForPropertyIsNotInFuture" xml:space="preserve">
+    <value>Værdien i egenskabet med navnet '{0}' er ikke i fremtiden.</value>
+    <comment>{0} = Navn på egenskab.</comment>
+  </data>
+  <data name="DateTimeValueForPropertyIsNotInPast" xml:space="preserve">
+    <value>Værdien i egenskabet med navnet '{0}' er ikke i fortiden.</value>
+    <comment>{0} = Navn på egenskab.</comment>
+  </data>
+  <data name="DataProviderDoesNotHandlesPayments" xml:space="preserve">
+    <value>Dataleverandøren med navnet '{0}' håndterer ikke betalinger.</value>
+    <comment>{0} = Navn på dataleverandør.</comment>
+  </data>
 </root>
