--- a/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
+++ b/OSDevGrp.OSIntranet.Resources/ExceptionMessages.da-DK.resx
@@ -267,4 +267,8 @@
     <value>Dataleverandøren med navnet '{0}' håndterer ikke betalinger.</value>
     <comment>{0} = Navn på dataleverandør.</comment>
   </data>
+  <data name="LengthForPropertyIsInvalid" xml:space="preserve">
+    <value>Længden på værdien i egenskaben med navnet '{0}' er ugyldig (længden skal være mellem {1} og {2} tegn).</value>
+    <comment>{0} = Navn på egenskab, {1} = Min. længde, {2} = Max. længde.</comment>
+  </data>
 </root>
